avanzando la pagina

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,17 +30,29 @@ const { title } = Astro.props;
 				<a href="" class=" hover:text-green-400 ">Iniciar sesion</a>
 			</div>
 		</nav>
-		<div class="bg-gradient-to-b from-[#FFD2D7] to-25% to-[#121212]">
-			<div class="bg-no-repeat bg-right-bottom w-full  h-[480px] bg-[url('desktop-album-evergreen-1x.png')] grid grid-cols-2 ">
-				<div class="m-auto text-white">
-					<h1> Disfruta de tu contenido <br> favorito sin limites <br> Prueba Premiun <br> Individual gratis durante <br> 1 mes  </h1>
-				</div>
-				<div class="">
+		<div class="bg-gradient-to-b from-[#FFD2D7] to-15% to-[#121212]">
+			<div class="bg-no-repeat bg-right-bottom w-full  h-[480px] bg-[url('desktop-album-evergreen-1x.png')] ">
+				
+				<div class="ml-[20%] mr-[20%] h-[480px] w-[40%] p-9 text-white space-y-6"> 
+					<h1 class="text-5xl  font-semibold" >Disfruta de tu contenido <br> favorito sin límites. <br> Prueba Premium <br> Individual gratis durante <br> 1 mes.</h1>
+					<p>Después, solo 16.900 COP/mes. Cancela cuando quieras.</p>
 
+					<div class="space-x-3 font-bold pt-3">
+						<a href="#" class="bg-[#FFD2D7] p-3 border rounded-3xl text-black">Probar gratis durante de un mes</a>
+						<a href=" #" class="bg-black p-3 border rounded-3xl text-white">Ver todos los planes</a>
+					</div>
+					<p class="text-[10px]">Gratis durante 1 mes. Luego, 16.900 COP al mes. Oferta disponible <br>solo si no has probado Premium. <span class="border-b">Consulta las condiciones.</span></p>
 				</div>
-			
+		</div>
+	</div>
+
+		<div class="w-full flex justify-center h-screen">
+
+			<div class="bg-black h-full w-[60%] text-white">
+				<p>holaaaa</p>
 			</div>
 		</div>
+
 	
 		
 
