--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,12 +46,160 @@ const { title } = Astro.props;
 		</div>
 	</div>
 
-		<div class="w-full flex justify-center h-screen">
+			<div class="w-full h-[500px] bg-[#121212]">
+				<div class=" ml-[20%] mr-[20%] pt-20 items-center text-center text-white font-semibold space-y-3">
+					<h1 class="text-5xl ">Planes asequibles para cualquier situación</h1>
+					<p>Elige un plan Premium y escucha música sin anuncios y sin límites en teléfonos, altavoces y <br> otros dispositivos. Paga de varias formas. Cancela cuando quieras.</p>
+					
+					<div class="grid grid-cols-2 pt-20">
+					
+						<div class="m-auto"><p class="text-3xl">Todos los planes Premium incluyen <br> lo siguiente:</p></div>
+						<div >
+							<li>Escucha tu música favorita sin anuncios</li>
+							<li>Descarga de canciones para disfrutarlas sin conexión</li>
+							<li>Escucha canciones en cualquier orden</li>
+							<li>Calidad del audio alta</li>
+							<li>Escucha lo que quieras con tus amigos, en tiempo real</li>
+							<li>Organiza la cola de reproducción</li>
+						</div>
+					</div>
 
-			<div class="bg-black h-full w-[60%] text-white">
-				<p>holaaaa</p>
+				</div>
 			</div>
-		</div>
+
+
+			<div class="h-[600px] w-full bg-[#121212] justify-center flex space-x-8">
+				
+					<div class="bg-[#242424] w-[20%] h-[550px] rounded-2xl text-white ">
+						<p class="p-1 bg-[#FFD2D7] w-[200px] rounded-tl-2xl rounded-br-lg text-black font-semibold">Gratis durante un mes </p>
+						<div class="pt-5 space-y-3  ml-2 ">
+						<p class="font-semibold">Premiun</p>
+						<h1 class="text-[#FFD2D7] text-3xl font-bold">Individual</h1>
+						<div class="border-b  border-[#A7A7A7] pb-2">
+						<p class="font-bold"> Gratis Durante 1 mes </p>
+						<span class="text-[#A7A7A7]">Después, 16.900 COP/mes</span>
+						</div>
+						<div class="text-[15px] font-semibold pt-3">
+							<li>1 cuenta Premium</li>
+							<li>Cancela cuando quieras</li>
+							<li>Suscríbete o haz un solo pago</li>
+						</div>
+						<div class="flex flex-col items-center justify-center pt-8 space-y-3">
+							<a href="" class="bg-[#FFD2D7] px-[60px] py-3 rounded-3xl font-semibold text-black" >Probar Gratis Durante un mes</a>
+							<a href=""  class=" px-[120px] py-3 rounded-3xl font-semibold text-white border" >Un solo pago</a>
+						</div>
+						<p class="text-center items-center text-[12px] text-[#A7A7A7] pt-4 ">Gratis durante 1 mes. Luego, 16.900 COP al mes. Oferta <br> disponible solo si no has probado Premium. <span class="border-b border-[#A7A7A7]">Consulta <br>las condiciones.</span> </p>
+							
+						</div>
+
+
+					</div>
+
+					<div class="bg-[#242424] w-[20%] h-[550px] rounded-2xl text-white ">
+						<p class="p-1 bg-[#FFD2D7] w-[200px] rounded-tl-2xl rounded-br-lg text-black font-semibold">Gratis durante un mes </p>
+						<div class="pt-5 space-y-3  ml-2 ">
+						<p class="font-semibold">Premiun</p>
+						<h1 class="text-[#FFD2D7] text-3xl font-bold">Individual</h1>
+						<div class="border-b  border-[#A7A7A7] pb-2">
+						<p class="font-bold"> Gratis Durante 1 mes </p>
+						<span class="text-[#A7A7A7]">Después, 16.900 COP/mes</span>
+						</div>
+						<div class="text-[15px] font-semibold pt-3">
+							<li>1 cuenta Premium</li>
+							<li>Cancela cuando quieras</li>
+							<li>Suscríbete o haz un solo pago</li>
+						</div>
+						<div class="flex flex-col items-center justify-center pt-8 space-y-3">
+							<a href="" class="bg-[#FFD2D7] px-[60px] py-3 rounded-3xl font-semibold text-black" >Probar Gratis Durante un mes</a>
+							<a href=""  class=" px-[120px] py-3 rounded-3xl font-semibold text-white border" >Un solo pago</a>
+						</div>
+						<p class="text-center items-center text-[12px] text-[#A7A7A7] pt-4 ">Gratis durante 1 mes. Luego, 16.900 COP al mes. Oferta <br> disponible solo si no has probado Premium. <span class="border-b border-[#A7A7A7]">Consulta <br>las condiciones.</span> </p>
+							
+						</div>
+
+
+					</div>
+
+					<div class="bg-[#242424] w-[20%] h-[550px] rounded-2xl text-white ">
+						<p class="p-1 bg-[#FFD2D7] w-[200px] rounded-tl-2xl rounded-br-lg text-black font-semibold">Gratis durante un mes </p>
+						<div class="pt-5 space-y-3  ml-2 ">
+						<p class="font-semibold">Premiun</p>
+						<h1 class="text-[#FFD2D7] text-3xl font-bold">Individual</h1>
+						<div class="border-b  border-[#A7A7A7] pb-2">
+						<p class="font-bold"> Gratis Durante 1 mes </p>
+						<span class="text-[#A7A7A7]">Después, 16.900 COP/mes</span>
+						</div>
+						<div class="text-[15px] font-semibold pt-3">
+							<li>1 cuenta Premium</li>
+							<li>Cancela cuando quieras</li>
+							<li>Suscríbete o haz un solo pago</li>
+						</div>
+						<div class="flex flex-col items-center justify-center pt-8 space-y-3">
+							<a href="" class="bg-[#FFD2D7] px-[60px] py-3 rounded-3xl font-semibold text-black" >Probar Gratis Durante un mes</a>
+							<a href=""  class=" px-[120px] py-3 rounded-3xl font-semibold text-white border" >Un solo pago</a>
+						</div>
+						<p class="text-center items-center text-[12px] text-[#A7A7A7] pt-4 ">Gratis durante 1 mes. Luego, 16.900 COP al mes. Oferta <br> disponible solo si no has probado Premium. <span class="border-b border-[#A7A7A7]">Consulta <br>las condiciones.</span> </p>
+							
+						</div>
+					</div>
+					
+
+
+			</div>
+
+			<div class="h-[1000px] w-full bg-[#121212] justify-center flex space-x-8">
+
+				<div class="bg-[#242424] w-[20%] h-[550px] rounded-2xl text-white ">
+					<p class="p-1 bg-[#FFD2D7] w-[200px] rounded-tl-2xl rounded-br-lg text-black font-semibold">Gratis durante un mes </p>
+					<div class="pt-5 space-y-3  ml-2 ">
+					<p class="font-semibold">Premiun</p>
+					<h1 class="text-[#FFD2D7] text-3xl font-bold">Individual</h1>
+					<div class="border-b  border-[#A7A7A7] pb-2">
+					<p class="font-bold"> Gratis Durante 1 mes </p>
+					<span class="text-[#A7A7A7]">Después, 16.900 COP/mes</span>
+					</div>
+					<div class="text-[15px] font-semibold pt-3">
+						<li>1 cuenta Premium</li>
+						<li>Cancela cuando quieras</li>
+						<li>Suscríbete o haz un solo pago</li>
+					</div>
+					<div class="flex flex-col items-center justify-center pt-8 space-y-3">
+						<a href="" class="bg-[#FFD2D7] px-[60px] py-3 rounded-3xl font-semibold text-black" >Probar Gratis Durante un mes</a>
+						<a href=""  class=" px-[120px] py-3 rounded-3xl font-semibold text-white border" >Un solo pago</a>
+					</div>
+					<p class="text-center items-center text-[12px] text-[#A7A7A7] pt-4 ">Gratis durante 1 mes. Luego, 16.900 COP al mes. Oferta <br> disponible solo si no has probado Premium. <span class="border-b border-[#A7A7A7]">Consulta <br>las condiciones.</span> </p>
+						
+					</div>
+				</div>
+				<div class="bg-[#242424] w-[20%] h-[550px] rounded-2xl text-white ">
+					<p class="p-1 bg-[#FFD2D7] w-[200px] rounded-tl-2xl rounded-br-lg text-black font-semibold">Gratis durante un mes </p>
+					<div class="pt-5 space-y-3  ml-2 ">
+					<p class="font-semibold">Premiun</p>
+					<h1 class="text-[#FFD2D7] text-3xl font-bold">Individual</h1>
+					<div class="border-b  border-[#A7A7A7] pb-2">
+					<p class="font-bold"> Gratis Durante 1 mes </p>
+					<span class="text-[#A7A7A7]">Después, 16.900 COP/mes</span>
+					</div>
+					<div class="text-[15px] font-semibold pt-3">
+						<li>1 cuenta Premium</li>
+						<li>Cancela cuando quieras</li>
+						<li>Suscríbete o haz un solo pago</li>
+					</div>
+					<div class="flex flex-col items-center justify-center pt-8 space-y-3">
+						<a href="" class="bg-[#FFD2D7] px-[60px] py-3 rounded-3xl font-semibold text-black" >Probar Gratis Durante un mes</a>
+						<a href=""  class=" px-[120px] py-3 rounded-3xl font-semibold text-white border" >Un solo pago</a>
+					</div>
+					<p class="text-center items-center text-[12px] text-[#A7A7A7] pt-4 ">Gratis durante 1 mes. Luego, 16.900 COP al mes. Oferta <br> disponible solo si no has probado Premium. <span class="border-b border-[#A7A7A7]">Consulta <br>las condiciones.</span> </p>
+						
+					</div>
+				</div>
+				
+
+			</div>
+
+
+			
+		
 
 	
 		
